Fix invisible social icons on mobile interface (#328)
* Show social buttons on mobile

* Decrease margin on left side of compressed header content

--- a/css/main.sass
+++ b/css/main.sass
@@ -109,12 +109,17 @@ header.shrink
     height: 80px
     position: fixed
     .social
-        display: none
+        margin-top: 18px
+        li
+            margin-left: 5px
+            display: inline-block
     #logo
         transform: rotate(-90deg) scale(0.4)
         -webkit-transition: 0.2s
         transition: 0.2s
-        margin-top: -2.3em
+        margin:
+            top: -2.3em
+            left: -1.3em
     .title, h3
         display: none
     .title-simple
@@ -479,15 +484,6 @@ footer ul
             top: auto
     .banners, h3
         display: none
-    .social
-        margin-left: 20px
-        display: block
-        li
-            display: inline-block
-            margin: 2px
-        img
-            height: 40px
-            width: 40px
     h1
         line-height: 1.2
     h2
